# Algorithms

./: CMakeLists.txt  Makefile  README.md
include/: algorithms.h
src/: CMakeLists.txt  bigMean.c  divisibleBy.c  eulers.c  factorial.c  fibonacci.c  gallon2liter.c  inInterval.c  interestingSeries.c  interestingSums.c  lightPotency.c  main.c  mean.c  metersToSteps.c  perfectNumber.c  pointQuadrantLocator.c  powerSum.c  powerSumSeries.c  salaryRaise.c  shapeAreaCalculator.c  sortOrder.c  sphereVolume.c  sumOfMultiples.c  temperatureConversion.c  timeConverter.c  timePassed.c  triangleCategorizer.c
